# tsar-test

./: .gitignore  .ptsconfig  .ptsconfig.in  .sapfortest  .sapfortest.in  CMakeLists.txt  NOTICE.txt  Testing.md
sys/: .gitignore  (+2 more)
tests/transform/: CMakeLists.txt
tests/transform/de_decls/: CMakeLists.txt  fail  pass
tests/transform/de_decls/de_decls_1/: main.c  tsar.conf
tests/transform/de_decls/de_decls_10/: tsar.conf
tests/transform/de_decls/de_decls_11/: tsar.conf
tests/transform/de_decls/de_decls_12/: tsar.conf
tests/transform/de_decls/de_decls_13/: main.c  tsar.conf
tests/transform/de_decls/de_decls_14/: main.c  tsar.conf
tests/transform/de_decls/de_decls_15/: tsar.conf
tests/transform/de_decls/de_decls_16/: output_filter.pl  tsar.conf
tests/transform/de_decls/de_decls_17/: tsar.conf
tests/transform/de_decls/de_decls_18/: tsar.conf
tests/transform/de_decls/de_decls_19/: main.c  tsar.conf
tests/transform/de_decls/de_decls_2/: tsar.conf
tests/transform/de_decls/de_decls_20/: tsar.conf
tests/transform/de_decls/de_decls_21/: main.c  tsar.conf
tests/transform/de_decls/de_decls_22/: tsar.conf
tests/transform/de_decls/de_decls_23/: main.c  tsar.conf
tests/transform/de_decls/de_decls_24/: main.c  tsar.conf
tests/transform/de_decls/de_decls_25/: tsar.conf
tests/transform/de_decls/de_decls_26/: tsar.conf
tests/transform/de_decls/de_decls_27/: tsar.conf
tests/transform/de_decls/de_decls_28/: tsar.conf
tests/transform/de_decls/de_decls_29/: main.c  tsar.conf
tests/transform/de_decls/de_decls_3/: main.c  tsar.conf
tests/transform/de_decls/de_decls_30/: main.cpp  tsar.conf
tests/transform/de_decls/de_decls_31/: tsar.conf
tests/transform/de_decls/de_decls_32/: main.c  tsar.conf
tests/transform/de_decls/de_decls_33/: tsar.conf
tests/transform/de_decls/de_decls_34/: tsar.conf
tests/transform/de_decls/de_decls_35/: main.c  tsar.conf
tests/transform/de_decls/de_decls_36/: main.c  tsar.conf
tests/transform/de_decls/de_decls_37/: tsar.conf
tests/transform/de_decls/de_decls_38/: main.c  tsar.conf
tests/transform/de_decls/de_decls_39/: tsar.conf
tests/transform/de_decls/de_decls_4/: main.c  tsar.conf
tests/transform/de_decls/de_decls_40/: tsar.conf
tests/transform/de_decls/de_decls_41/: main.c  tsar.conf
tests/transform/de_decls/de_decls_42/: tsar.conf
tests/transform/de_decls/de_decls_43/: main.c  tsar.conf
tests/transform/de_decls/de_decls_44/: tsar.conf
tests/transform/de_decls/de_decls_45/: tsar.conf
tests/transform/de_decls/de_decls_46/: main.c  tsar.conf
tests/transform/de_decls/de_decls_47/: tsar.conf
tests/transform/de_decls/de_decls_5/: tsar.conf
tests/transform/de_decls/de_decls_6/: main.c  tsar.conf
tests/transform/de_decls/de_decls_7/: tsar.conf
tests/transform/de_decls/de_decls_8/: main.c  tsar.conf
tests/transform/de_decls/de_decls_9/: main.c  tsar.conf
tests/transform/dvmh/: CMakeLists.txt  pass  serial
tests/transform/dvmh/Jacobi/: main.c  seq.conf
tests/transform/dvmh/actual_1/: main.c
tests/transform/dvmh/actual_2/: main.c
tests/transform/dvmh/corner_1/: main.c
tests/transform/dvmh/file_1/: compile.conf  main.c  tsar.conf
tests/transform/dvmh/interproc_1/: main.c  tsar.conf
tests/transform/dvmh/loop_1/: main.c  tsar.conf
tests/transform/dvmh/loop_2/: main.c
tests/transform/dvmh/no_array_1/: main.c
tests/transform/dvmh/no_distr_1/: main.c  tsar.conf
tests/transform/dvmh/no_distr_2/: main.c
tests/transform/dvmh/no_distr_3/: main.c
tests/transform/dvmh/no_distr_4/: compile.conf  main.c  tsar.conf
tests/transform/dvmh/remote_1/: main.c
tests/transform/dvmh/remote_2/: main.c
tests/transform/dvmh/remote_3/: main.c
tests/transform/dvmh/remote_4/: main.c
tests/transform/dvmh/user_dir_1/: main.c
tests/transform/dvmh_sm/: CMakeLists.txt  init  pass  serial
tests/transform/dvmh_sm/Adi.func/: main.c
tests/transform/dvmh_sm/Adi.global/: main.c
tests/transform/dvmh_sm/Jacobi/: run.conf
tests/transform/dvmh_sm/Jacobi.func/: compile.conf  run.conf  seq.conf  tsar.conf
tests/transform/dvmh_sm/dvmh_sm_1/: main.c
tests/transform/dvmh_sm/dvmh_sm_10/: main.c
tests/transform/dvmh_sm/dvmh_sm_11/: main.c
tests/transform/dvmh_sm/dvmh_sm_12/: main.c  tsar.conf
tests/transform/dvmh_sm/dvmh_sm_13/: main.c
tests/transform/dvmh_sm/dvmh_sm_2/: main.c  tsar.conf
tests/transform/dvmh_sm/dvmh_sm_3/: main.c
tests/transform/dvmh_sm/dvmh_sm_4/: main.c
tests/transform/dvmh_sm/dvmh_sm_5/: compile.conf  main.c  seq.conf
tests/transform/dvmh_sm/dvmh_sm_6/: compile.conf  main.c  run.conf  seq.conf  tsar.conf
tests/transform/dvmh_sm/dvmh_sm_7/: main.c
tests/transform/dvmh_sm/dvmh_sm_8/: main.c
tests/transform/dvmh_sm/dvmh_sm_9/: main.c
tests/transform/dvmh_sm/file_1/: foo.c  run.conf  seq.conf  tsar.conf
tests/transform/dvmh_sm/induction_1/: main.c
tests/transform/dvmh_sm/interproc_1/: main.c  tsar.conf
tests/transform/dvmh_sm/interproc_3/: interproc_3.c  tsar.conf
tests/transform/dvmh_sm/private_1/: main.c
tests/transform/dvmh_sm/reduction_1/: main.c
tests/transform/initialize/: CMakeLists.txt  pass
tests/transform/initialize/initialize_1/: main.c
tests/transform/initialize/initialize_10/: main.c
tests/transform/initialize/initialize_11/: main.c
tests/transform/initialize/initialize_2/: main.c
tests/transform/initialize/initialize_3/: main.c
tests/transform/initialize/initialize_4/: main.c
tests/transform/initialize/initialize_5/: main.c
tests/transform/initialize/initialize_6/: main.c
tests/transform/inline/: CMakeLists.txt  check  pass
tests/transform/interchange/: CMakeLists.txt  pass
tests/transform/openmp/: CMakeLists.txt  check  pass  serial
tests/transform/propagate/: CMakeLists.txt  check  fail
tests/transform/remove_redarray/: CMakeLists.txt  pass
tests/transform/replace/: CMakeLists.txt  check  pass
tests/transform/replace_const/: CMakeLists.txt  pass
tests/transform/reversal/: CMakeLists.txt  pass
tests/transform/split_decls/: CMakeLists.txt  pass
tests/transform/unreachable/: CMakeLists.txt  pass
(+1532 files in other folders)
