add_subdirectory(de_decls)
add_subdirectory(dvmh_sm)
add_subdirectory(inline)
add_subdirectory(openmp)
add_subdirectory(propagate)
add_subdirectory(replace)
add_subdirectory(interchange)
add_subdirectory(reversal)
add_subdirectory(unreachable)

if (TSAR_ENABLE_FORTRAN)
  add_subdirectory(replace_const)
endif()

if (TSAR_ENABLE_APC)
  add_subdirectory(dvmh)
endif()
